--- a/common/common-res/src/main/res/values/strings.xml
+++ b/common/common-res/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="usa">美国</string>
     <string name="email">邮箱</string>
     <string name="input_phone">请输入手机号码</string>
+    <string name="input_email">请输入E-mail</string>
     <string name="input_pwd">请输入密码</string>
     <string name="input_pwd_again">请再次输入密码</string>
     <string name="keep_pwd">记住我的账号</string>
@@ -49,6 +50,7 @@
     <string name="add_device1">選擇裝置類型</string>
     <string name="add_device2">選擇配網方式</string>
     <string name="add_device22">選擇 2.4 GHz Wi-Fi 網路並輸入密碼</string>
+    <string name="add_device23">請將QRcode放置門鎖鏡頭前方掃描</string>
     <string name="add_device3">正在新增裝置</string>
     <string name="add_device4">設備已連接</string>
     <string name="add_device_hint">說明: 熱點為裝置熱點 \n QRcode:需為 2.4GHz </string>
@@ -57,4 +59,7 @@
     <string name="select_wifi">請選擇 Wi-Fi</string>
     <string name="select_wifi_tips">如果你的 Wi-Fi 是 5GHz，請先設置為 2.4 Hz</string>
     <string name="more_tips">更多常見問題</string>
+    <string name="pairing_finish">120 秒後完成配對...</string>
+    <string name="pairing_finish1">配對完成...</string>
+    <string name="goto_device_list">前往装置清单</string>
 </resources>
