新增会员页的icon图标，实现会员页部分UI代码

--- a/common/common-res/src/main/res/values/strings.xml
+++ b/common/common-res/src/main/res/values/strings.xml
@@ -57,4 +57,8 @@
     <string name="select_wifi">請選擇 Wi-Fi</string>
     <string name="select_wifi_tips">如果你的 Wi-Fi 是 5GHz，請先設置為 2.4 Hz</string>
     <string name="more_tips">更多常見問題</string>
+    
+<!--    会员中心-->
+    <string name="message_settings">通知設定</string>
+    <string name="device_share">装置共享</string>
 </resources>
