完善装置共享页面，实现获取用户设备和他人分享给用户的设备接口

--- a/common/common-res/src/main/res/values/strings.xml
+++ b/common/common-res/src/main/res/values/strings.xml
@@ -70,6 +70,9 @@
     <string name="vip_update">更新設定</string>
     <string name="vip_clear_cache">清理緩存</string>
     <string name="vip_logout">登出</string>
+    <string name="my_device">我的裝置</string>
+    <string name="receive_device">接收装置</string>
+    <string name="nothing_device_tips">您沒有裝置\n所以不能共享給親友</string>
     
     <string name="pairing_finish">120 秒後完成配對...</string>
     <string name="pairing_finish1">配對完成...</string>
