--- a/common/common-res/src/main/res/values/strings.xml
+++ b/common/common-res/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="japan">日本</string>
     <string name="usa">美国</string>
     <string name="email">邮箱</string>
+    <string name="success">success</string>
+    <string name="input_device_name">请输入设备名称</string>
     <string name="input_phone">请输入手机号码</string>
     <string name="input_email">请输入E-mail</string>
     <string name="input_pwd">请输入密码</string>
@@ -79,6 +81,9 @@
     <string name="change">变更</string>
     <string name="all_select">全选</string>
     <string name="notice_tips">通知设定</string>
+    <string name="notice1">门铃通知</string>
+    <string name="notice2">开门通知</string>
+    <string name="notice3">告警通知</string>
     <string name="notice_switch1">有人按门铃</string>
     <string name="notice_switch2">指纹试错警告</string>
     <string name="notice_switch3">密码试错警告</string>
